# vent-mcp

./: .gitignore  Cargo.toml  README.md
.devana/: 20260627T183609Z-P3-duplicate-jsonl-sink-file.md  20260627T183609Z-P3-unbounded-provider-path-index.md  20260627T183639Z-P1-provider-prefix-path-collision.md  20260627T183640Z-P1-provider-numeric-index-unbounded.md  20260627T183641Z-P2-jsonl-dir-empty-string-cwd.md  20260627T183642Z-P2-jsonl-dir-tilde-missing-home.md  20260627T183643Z-P2-duplicate-jsonl-sinks.md  20260627T183644Z-P2-webhook-short-secret-leak.md
.github/workflows/: ci.yml  release.yml
configs/: config.sample.toml
scripts/: build-release.ps1  build-release.sh  package-release.ps1  package-release.sh  resolve-version.sh
src/: config.rs  delivery.rs  lib.rs  main.rs  provider.rs  server.rs  sinks.rs  types.rs
tests/: cli.rs
